[metadata]
name = airlock-gateway-rest-client
author = Orlando Tomás
author-email = orlando.tomas@hotmail.com
version = attr: src.VERSION
description = A Python REST client to manage Airlock Gateway configuration.
long_description = file: README.md, LICENSE
license = MIT License
license_files = LICENSE
project_urls=
    Bug Reports = https://github.com/orltom/airlock-gateway-client-python/issues
    Source = https://github.com/orltom/airlock-gateway-client-python/
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[build_sphinx]
project = 'Airlock Gateway REST client'
copyright = '2020, Orlando Tomás'
version = 0.1
release = 0.1
source-dir = doc/source
build-dir  = build/doc

[aliases]
test=pytest

[tool:pytest]
addopts = -v
testpaths = tests